# p2e-character-one-pager

./: .gitignore  README.md  pathbuilder_to_onepager_spec.md  pyproject.toml  run.sh
p2e_character_one_pager/: cli.py  model.py  parse.py  profile.py  render.py  spells.py
p2e_character_one_pager/assets/: print.css
p2e_character_one_pager/assets/themes/: dark.css  default.css
p2e_character_one_pager/templates/: onepager.html.j2
pb2onepager/: __init__.py  cli.py  parse.py
pb2onepager/assets/: base.css
