[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p2e-character-one-pager"
version = "0.1.0"
description = "Pathbuilder 2e → single-page HTML character sheet generator"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.1",
    "click>=8.1",
]

[project.scripts]
p2e-character-one-pager = "p2e_character_one_pager.cli:main"

[tool.setuptools.packages.find]
include = ["p2e_character_one_pager*"]

[tool.setuptools.package-data]
p2e_character_one_pager = ["assets/**/*.css", "templates/**/*.j2"]
